# personal-site

./: .gitattributes  .gitignore  README.md  angular.json  blog.html  bun.lockb  global.css  index.html  package-lock.json  package.json  personal.html  sidebar.html  sidebar.js  work.html
.github/workflows/: sync-assets.yml
api/: .env.example  Procfile  README.md  __init__.py  config.py  database.py  e2b_setup.py  main.py  models.py  pyproject.toml  railway.toml  run.py  session_manager.py
api/alembic/: env.py
api/alembic/versions/: a1b2c3d4e5f6_create_events_table.py  f4b05cf0d410_create_terminal_sessions_table.py
blog/: Dockerfile  README.md  feed.xml  generate_feed.py  index.html  posts.json  server.py  sidebar.js  slurp.js  styles.css  theme.js
blog/posts/: building-with-simplicity.html  codegen-compiler-arc.html  lessons-young-startup-founder.html  sf_style.html  social-media-trained-brains-codegen.html  the-making-of-braelyn-ai.html  why-ai-isnt-buzzword.html
desk/: .dockerignore  .env.example  Dockerfile  IDEAS.md  README.md  admin.html  bun.lockb  index.html  nginx.conf  package.json  railway.toml  test-assets.html  vite.config.js
desk/public/: Cocaine Pile 3D Model.glb  Concrete Wall 3D Model.glb  Emergency Stop Button 3D Model.glb  Industrial Factory Wall 3D Model (1).glb  Steel Road Barrier 3D Model.glb  Wooden Desk Chair 3D Model.glb  Yamaha R1 3D Model.glb  backrooms_map_packed_blender_3.2.0.glb  cessna172.glb  creepy-knock.m4a  everything_bagel.glb  floor.glb  ipod_classic.glb  lamp-buzz.mov  napkin.glb  smily_horror_monster.glb
desk/scripts/: apply-compression.mjs  compress-models.mjs  upload-assets.sh
desk/src/: CRTShader.js  CRTTurnOnShader.ts  Notepad.js  Oscilloscope.js  Terminal.js  Terminal.ts  WhiteOutShader.ts  admin.css  admin.ts  animate.ts  counter.ts  easterEggs.ts  input.ts  interaction.ts  main.js  main.ts  state.ts  style.css  terminalSession.ts  types.ts  vite-env.d.ts
frontend/: CNAME  Dockerfile  Procfile  README.md  angular.json  bun.lockb  package.json  railway.toml
src/: index.html  styles.css
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
(+133 files in other folders)
